tests/ui/since/unknown_field.stderr
error: Unknown field: `invalid`
 --> $DIR/unknown_field.rs:3:9
  |
3 | #[since(invalid="field")]
  |         ^^^^^^^^^^^^^^^
