tests/ui/since/unknown_field.rs
use doc_item::since;

#[since(invalid="field")]
fn unknown_field() {}

fn main() {}
